# gpu-powerflow

./: .gitignore  CMakeLists.txt  Dockerfile  PLAN.md  README.md  docker-compose.yml  docker_build.sh  docker_run.bash  docker_run.sh  requirements.txt
core/: CMakeLists.txt
core/cpp/: cudss_remap_kernel.cu  cudss_solver.cpp  cudss_solver.hpp  jacobian.cpp  mismatch.cpp  newtonpf.cpp  newtonpf.hpp
core/cuda/: cuda_accel.cu  cuda_accel.hpp  permutation_kernel.cu
core/pybind/: CMakeLists.txt  binding_helper.cpp  binding_helper.hpp  cpp_binding.cpp
core/test/: CMakeLists.txt  benchmark_atomic.cpp  benchmark_batch_detailed.cpp  benchmark_detailed.cpp  benchmark_multibatch.cpp  diagnose_solver.cpp  profile_no_atomic.cpp  sy_test_cuda_newtonpf.cpp  test_cpu_gpu_comparison.cpp  test_integration.cpp  test_memcpy_timing.cpp  test_newtonpf.cpp  verify_all_cases.cpp  verify_all_converging.cpp
core/utils/: cuda_utils.cuh  dump.hpp  io.cpp  io.hpp  nr_data.cpp  nr_data.hpp  timer.hpp
cuPF/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
cuPF/.agent/0/: goal.md  project.json
cuPF/.agent/01-cupf-1-2-3-4-5-6/: goal.md  project.json
cuPF/.agent/02-cupf-workspace-gpu/: goal.md  project.json
cuPF/.agent/03-cupf-workspace-gpu/: project.json
cuPF/.agent/04-cudss-cudss-prepare/: goal.md  project.json
cuPF/.agent/05-03-noreturn-static-cast/: goal.md  project.json
cuPF/.agent/eigen-klu/: experiment.sh  goal.md  metrics.schema.json  project.json
cuPF/benchmarks/: CMakeLists.txt  DATASETS.md  README.md  run_benchmarks.py  run_texas_batch_benchmark.py
cuPF/benchmarks/cpp/: cupf_case_benchmark.cpp
cuPF/bindings/: pybind_cupf.cpp  torch_cupf_extension.cpp
cuPF/docs/: README.md  RULE.md  bindings.md  contribution-analysis.md  core.md  cuda-graph-benchmark.md  cuda-graph-iteration.md  gpu_batch_improvement_plan.md  math.md  mixed-precision-findings.md  mixed-precision-plan.md  newton_solver.md  overview.md  precision-error-measurement.md  precision-study-report.md  storage.md  system_architecture.md  utils.md
cuPF/docs/backend/: cuda.md  interface.md
cuPF/docs/core/: README.md  jacobian_builder.md  newton_solver.md  types.md
cuPF/docs/implementation/: README.md  dead_code_audit.md  deviations.md  docs_src_reconciliation.md  naming_audit.md  phase_00_solver_pipeline.md  phase_01_batch_api_and_types.md  phase_02_cuda_storage_layout.md  phase_03_voltage_update_and_sign.md  phase_04_mismatch_and_ibus.md  phase_05_jacobian_split.md  phase_06_cudss_uniform_batch.md  phase_07_validation_and_cleanup.md  structure_audit.md
cuPF/docs/ops/: README.md  ibus.md  jacobian.md  linear_solve.md  mismatch.md  voltage_update.md
cuPF/docs/perf/: bottleneck_report.md
cuPF/docs/storage/: README.md  storage_design.md
cuPF/docs/variants/: README.md
cuPF/evaluator/cpp/: cupf_cpp_evaluate.cpp
cuPF/perf/: .gitignore  aggregate.py  batch_bench.cpp  cudss_capture_probe.cu  dump_cases.py  verify_fp64_batch.py
cuPF/python/cupf/: __init__.py  torch_autograd.py
cuPF/tests/: CMakeLists.txt  batch_bench.cpp  cupf_bench.cpp  dump_case_loader.cpp  dump_case_loader.hpp  graph_bench.cpp  lifecycle_bench.cpp  run_cupf.py  small_cases.cpp  test_cpu_solver.cpp  test_minimal_solver.cpp
cuPF/tests/cpp/: cupf_cpp_evaluate.cpp  dump_case_loader.hpp
cuPF/tests/precision_study/: README.md  driver_A.py  driver_B.py  harness.py  measure.py  resA.json  resB.json
cuPF/tests/python/: README.md  test_bindings.py  test_torch_autograd.py
cuPF/tests/scripts/: build_cupf.sh
cuPF/tests/smoke/: README.md  test_bindings.py  test_torch_autograd.py
cuPF/tests/unit/: small_cases.hpp  test_cpu_solver.cpp
custom_linear_solver/: CMakeLists.txt  README.md
custom_linear_solver/bench/: tc_trailing_microbench.cu
custom_linear_solver/deprecated/: README.md
custom_linear_solver/docs/: 00-index.md  08-small-front-demand-and-concept-comparison.md  08-tiny-front-demand-and-concept-comparison.md  260612_batch_factorize_goal.md  260612_goal.md  INDEX.md  README.md  acceleration-mechanism-ranked.md  analyze-bottleneck-and-optimization.md  api-and-build-design.md  baseline-vs-strumpack.md  contribution-analysis.md  fp32-batched-factor-solve-optimization.md  fsa-optimization-report.md  lineage-strumpack-not-the-baseline.md  main-report.md  no-pivoting-empirical-proof.md  no-pivoting-proof.md  nr-profile-3way-analysis.md  nsys-strumpack-nr-loop-profile.md  nsys-three-solvers-nr-loop-profile.md  optimal-configuration.md  related-work-and-contribution.md  related-work-and-novelty.md  storyline.md  strumpack-nsys-nr-profile.md  strumpack-paper-table2-reproduction.md  strumpack-power-grid-analysis.md  strumpack-reproduction-report.md  strumpack-vs-cudss-power-grid-wall-vs-kernel.md  strumpack-vs-custom-multifrontal-8387.md  strumpack-vs-custom-multifrontal-case8387.md  tensor-core-factor-design.md  tensor-core-factorize-design.md  warm-cache-stack-port-expectations.md  why-custom-fast-on-power-grid.md  why-custom-is-fast.md
custom_linear_solver/scripts/: io.hpp  run_cudss_solver.cpp  run_custom_solver.cu
custom_linear_solver/src/: level_metrics.hpp  multifrontal.cu  multifrontal.hpp  numeric_engine.cu  numeric_engine.hpp  solver.cpp  solver.hpp  solver_constants.hpp
custom_linear_solver/tests/: .gitignore  README.md  analyze_tree.py  depth_analysis.py  depth_analysis_v2.py  gemm_fraction.py  io.cpp  io.hpp  measure_front_distributions.py  measure_strumpack_front_distributions.py  no_pivot_proof.py  run_cudss_solver.cpp  run_cudss_solver_fp32.cpp  run_custom_solver.cu
exp/20260409/: CMakeLists.txt  PLAN.md  README.md  cudss_benchmark.cpp  cudss_schur_runner.hpp  cupf_dataset_loader.cpp  cupf_dataset_loader.hpp  powerflow_linear_system.cpp  powerflow_linear_system.hpp  sample_schur_complement.cpp  schur_complement.md
exp/20260515/: CMakeLists.txt  README.md
exp/20260519/: CMakeLists.txt
exp/20260520/: CMakeLists.txt  README.md
exp/20260607-2/: CMakeLists.txt  README.md
v2/: CMakeLists.txt  README.md
v2/benchmarks/: run_benchmarks.py
v2/bindings/: pybind_module.cpp
(+8395 files in other folders)
