[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "cupf"
version = "0.1.0"
description = "GPU-accelerated Newton-Raphson power flow solver"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "scipy>=1.11"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
wheel.packages = ["python/cupf"]

[tool.scikit-build.cmake.define]
WITH_CUDA = {env = "CUPF_WITH_CUDA", default = "OFF"}
CUPF_CUDSS_REORDERING_ALG = {env = "CUPF_CUDSS_REORDERING_ALG", default = "DEFAULT"}
CUPF_CUDSS_ENABLE_MT = {env = "CUPF_CUDSS_ENABLE_MT", default = "OFF"}
CUPF_CUDSS_HOST_NTHREADS = {env = "CUPF_CUDSS_HOST_NTHREADS", default = "AUTO"}
CUPF_CUDSS_ND_NLEVELS = {env = "CUPF_CUDSS_ND_NLEVELS", default = "AUTO"}
CUPF_CUDSS_ENABLE_MG = {env = "CUPF_CUDSS_ENABLE_MG", default = "OFF"}
CUPF_CUDSS_MG_DEVICE_INDICES = {env = "CUPF_CUDSS_MG_DEVICE_INDICES", default = "0,1"}
